changed display: none to visibility: hidden in mobile to hopefully fix burger menu bug

--- a/style.css
+++ b/style.css
@@ -434,7 +434,7 @@ li:last-child {
         padding: 20px;
     }
     #header-nav > ul {
-        display: none;
+        visibility: hidden;
     }
     #hero-section {
         justify-content: flex-start;
